@@ -2,7 +2,7 @@ Package: streamR
 Title: Access to Twitter Streaming API via R
 Description: Functions to access Twitter's filter, sample, and user streams, and to
     parse the output into data frames.
-Version: 0.4.3
+Version: 0.4.4
 Author: Pablo Barbera <pablo.barbera@nyu.edu>
 Maintainer: Pablo Barbera <pablo.barbera@nyu.edu>
 Depends: R (>= 2.12.0), RCurl, rjson, ndjson
@@ -12,6 +12,6 @@ Collate: 'filterStream.R' 'parseTweets.R' 'sampleStream.R'
         'userStream.R' 'streamR-package.R' 'readTweets.R'
 RoxygenNote: 6.0.1
 NeedsCompilation: no
-Packaged: 2018-06-28 08:11:50 UTC; pablobarbera
+Packaged: 2018-07-28 01:30:31 UTC; pablobarbera
 Repository: CRAN
-Date/Publication: 2018-06-29 04:38:03 UTC
+Date/Publication: 2018-07-28 05:00:02 UTC
